resolving the errors

--- a/package.json
+++ b/package.json
@@ -7,20 +7,20 @@
     "node": "22.13.1"
   },
   "scripts": {
-    "build": "cross-env APP_ENV=production npx concurrently --kill-others-on-fail npm:build:*",
+    "build": "cross-env APP_ENV=production concurrently --kill-others-on-fail npm:build:*",
     "build:assets": "cpx \"src/assets/**/*.*\" dist/assets",
     "build:frontend": "webpack --output-path dist/public --config src/apps/frontend/webpack.prod.js",
     "coverage": "make run-vulture",
-    "fmt": "npx concurrently npm:fmt:*",
+    "fmt": "concurrently npm:fmt:*",
     "fmt:py": "make run-format && make run-format-tests",
     "fmt:ts": "prettier --write \"**/*.{js,ts,tsx}\" --ignore-path .prettierignore",
-    "lint": "npx concurrently -m 1 --kill-others-on-fail 'npm:lint:*(!fix)'",
+    "lint": "concurrently -m 1 --kill-others-on-fail 'npm:lint:*(!fix)'",
     "lint:ts": "eslint .",
     "lint:md": "remark .",
     "lint:fix": "eslint --fix .",
     "lint:py": "make run-lint",
     "script": "make run-script file=$npm_config_file",
-    "serve:win": "npx concurrently \"npm run serve:assets\" \"npm run serve:backend:win\" \"npm run serve:frontend\"",
+    "serve:win": "concurrently \"npm run serve:assets\" \"npm run serve:backend:win\" \"npm run serve:frontend\"",
     "serve:backend:win": "make run-engine-winx86",
     "serve": "bash -c 'make serve ARGS=\"$*\"' --",
     "serve:assets": "cpx \"src/assets/**/*.*\" dist/assets --watch",
@@ -30,7 +30,7 @@
     "serve:frontend": "webpack serve --output-path dist/public --config src/apps/frontend/webpack.dev.js --hot --progress",
     "start": "npm run serve:backend",
     "test": "cross-env APP_ENV=testing make run-test",
-    "test:docker": "npx concurrently --kill-others --success first npm:test:docker:*",
+    "test:docker": "concurrently --kill-others --success first npm:test:docker:*",
     "test:docker:run": "make run-test",
     "test:docker:temporal-server": "make run-temporal-server",
     "prepare": "husky"
