--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "lint:fix": "eslint --fix .",
     "lint:py": "make run-lint",
     "script": "make run-script file=$npm_config_file",
+    "serve:win": "concurrently \"npm run serve:assets\" \"npm run serve:backend:win\" \"npm run serve:frontend\"",
+    "serve:backend:win": "make run-engine-winx86",
     "serve": "bash -c 'make serve ARGS=\"$*\"' --",
     "serve:assets": "cpx \"src/assets/**/*.*\" dist/assets --watch",
     "serve:backend": "make run-engine",
