--- a/.github/workflows/preview_on_dispatch.yml
+++ b/.github/workflows/preview_on_dispatch.yml
@@ -10,7 +10,7 @@ jobs:
       cancel-in-progress: true
     with:
       hosting_provider: ${{ vars.HOSTING_PROVIDER }} # 'DIGITAL_OCEAN' or 'AWS'
-      app_name: frm-boilerplate
+      app_name: flask-react-template
       app_env: preview
       app_hostname: '{1}.preview.platform.bettrhq.com'
       branch: ${{ github.event.ref }}
