--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -3,7 +3,7 @@ version: '3'
 services:
   app:
     platform: 'linux/amd64'
-    image: 'frm-boilerplate'
+    image: 'flask-react-template'
     build:
       context: .
       dockerfile: Dockerfile
