--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   app:
-    image: 'frm-boilerplate'
+    image: 'flask-react-template'
     build:
       context: .
       dockerfile: Dockerfile
