Improve workflow security and readability
- Add specific permissions comments for each workflow instead of generic ones
- Add parentheses to condition in preview_on_pr_update.yml for better readability
- Add clear introduction to CONTRIBUTING.md guide

--- a/.github/workflows/clean_on_pr_closed.yml
+++ b/.github/workflows/clean_on_pr_closed.yml
@@ -4,6 +4,7 @@ on:
   pull_request:  # ✅ CHANGED from pull_request_target for safer for external contributions
     types: [closed]
 
+# Ensures PR cleanup workflow has minimal permissions for security
 permissions:
   contents: read # Allows reading repository contents
   pull-requests: write # Allow workflow to comment on, label, and update pull request as part of automation
