--- a/.github/workflows/preview_on_dispatch.yml
+++ b/.github/workflows/preview_on_dispatch.yml
@@ -2,7 +2,7 @@ name: preview_on_dispatch
 
 on: workflow_dispatch
 
-# to follow the principle of least privilege and enhance security.
+# Ensures manual preview deployment has minimal read-only permissions for security
 permissions:
   contents: read   # Read-only access to repo contents for safer workflows
   id-token: write  # Allow OIDC tokens for secure cloud authentication
