--- a/.github/workflows/production_on_push.yml
+++ b/.github/workflows/production_on_push.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
 
-# to follow the principle of least privilege and enhance security.
+# Ensures production deployment has minimal read-only permissions for security
 permissions:
   contents: read   # Read-only access to repo contents for safer workflows
   id-token: write  # Allow OIDC tokens for secure cloud authentication
