Revert external contributor changes in workflows

--- a/.github/workflows/clean_on_pr_closed.yml
+++ b/.github/workflows/clean_on_pr_closed.yml
@@ -1,7 +1,7 @@
 name: clean_on_pr_closed
 
 on:
-  pull_request:  # ✅ CHANGED from pull_request_target for safer for external contributions
+  pull_request_target:
     types: [closed]
 
 # Ensures PR cleanup workflow has minimal permissions for security
@@ -11,11 +11,6 @@ permissions:
 
 jobs:
   clean:
-    # Only run for team members or approved contributors
-    if: |
-      github.event.pull_request.head.repo.full_name == github.repository ||
-      contains(github.event.pull_request.labels.*.name, 'approved-contributor')
-
     uses: jalantechnologies/github-ci/.github/workflows/clean.yml@v3.2.5
     concurrency:
       group: ci-preview-${{ github.event.pull_request.head.ref }}
