added changes to the workflow files for testing

--- a/.github/workflows/clean_on_delete.yml
+++ b/.github/workflows/clean_on_delete.yml
@@ -1,5 +1,5 @@
 name: clean_on_delete
-
+  # this is a test branch
 on: delete
 
 # Ensures cleanup workflow has minimal read-only permissions for security
