--- a/package.json
+++ b/package.json
@@ -39,12 +39,13 @@
     "@datadog/browser-logs": "^6.6.4",
     "@datadog/browser-rum": "^6.6.4",
     "@datadog/browser-rum-react": "^6.6.4",
+    "ajv": "^8.17.1",
+    "ajv-keywords": "^5.1.0",
     "autoprefixer": "^10.4.18",
     "axios": "^1.0.0",
     "clsx": "^2.1.0",
-    "config": "^3.3.7",
     "cors": "^2.8.5",
-    "cpx": "^1.5.0",
+    "cpx": "^1.2.1",
     "eslint-config-prettier": "^9.1.0",
     "formik": "^2.4.5",
     "google-libphonenumber": "^3.2.38",
@@ -73,6 +74,7 @@
     "@typescript-eslint/parser": "^6.20.0",
     "babel-preset-es2015": "^6.24.1",
     "concurrently": "^7.2.2",
+    "config": "^3.3.12",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
     "eslint": "^7.32.0",
@@ -83,7 +85,7 @@
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-tailwindcss": "^3.14.2",
-    "forever": "^4.0.3",
+    "forever": "^1.0.1",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^9.1.4",
     "js-yaml": "^4.1.0",
@@ -98,9 +100,9 @@
     "ts-loader": "^9.4.1",
     "tsc-watch": "^5.0.3",
     "typescript": "^4.4.4",
-    "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.11.1",
+    "webpack": "^5.102.1",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.2",
     "webpack-merge": "^5.8.0"
   }
 }
