fix: resolve permission issues for non-root user in all environments

--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -18,6 +18,7 @@ services:
         condition: service_healthy
     volumes:
       - ./output:/app/output
+    user: "999:999"
 
   app-db:
     image: mongo:5.0
