--- a/lib/kube/production/deployment.yaml
+++ b/lib/kube/production/deployment.yaml
@@ -29,10 +29,26 @@ spec:
                       - platform-cluster-01-production-pool
       imagePullSecrets:
         - name: regcred
+      # Pod-level security context for non-root execution
+      securityContext:
+        runAsNonRoot: true
+        runAsUser: 999
+        runAsGroup: 999
+        fsGroup: 999
+        seccompProfile:
+          type: RuntimeDefault
       containers:
         - name: $KUBE_APP
           image: $KUBE_DEPLOYMENT_IMAGE
           imagePullPolicy: Always
+          # Container-level security context
+          securityContext:
+            allowPrivilegeEscalation: false
+            readOnlyRootFilesystem: true
+            runAsNonRoot: true
+            capabilities:
+              drop:
+                - ALL
           resources:
             requests:
               memory: '400Mi'
@@ -46,6 +62,14 @@ spec:
           envFrom:
             - secretRef:
                 name: $DOPPLER_MANAGED_SECRET_NAME
+          # Add volume mounts for writable directories
+          volumeMounts:
+            - name: tmp
+              mountPath: /opt/app/tmp
+            - name: logs
+              mountPath: /opt/app/logs
+            - name: output
+              mountPath: /app/output
           startupProbe:
             httpGet:
               path: /
@@ -62,3 +86,11 @@ spec:
               path: /
               port: 8080
             initialDelaySeconds: 30
+      # Add emptyDir volumes for writable paths
+      volumes:
+        - name: tmp
+          emptyDir: {}
+        - name: logs
+          emptyDir: {}
+        - name: output
+          emptyDir: {}
