Create Tasks, Get, Delete

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@datadog/browser-logs": "^6.6.4",
     "@datadog/browser-rum": "^6.6.4",
     "@datadog/browser-rum-react": "^6.6.4",
+    "acorn": "^8.15.0",
     "ajv": "^8.17.1",
     "ajv-keywords": "^5.1.0",
     "autoprefixer": "^10.4.18",
@@ -55,6 +56,7 @@
     "postcss": "^8.4.35",
     "postcss-loader": "^8.1.1",
     "postcss-preset-env": "^9.5.1",
+    "postcss-selector-parser": "^7.1.0",
     "prettier": "^3.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
