--- a/.github/workflows/permanent_preview.yml
+++ b/.github/workflows/permanent_preview.yml
@@ -1,33 +1,27 @@
-name: permanent_preview
+name: clean_on_pr_closed
 
 on:
-  push:
-    branches:
-      - main
+  pull_request_target:
+    types: [closed]
 
 jobs:
-  permanent_preview:
-    uses: jalantechnologies/github-ci/.github/workflows/ci.yml@v3.2.5
+  clean:
+    uses: jalantechnologies/github-ci/.github/workflows/clean.yml@vikram/feat/add-aws-ecr-image-cleanup
     concurrency:
-      group: ci-permanent-preview
+      group: ci-preview-${{ github.event.pull_request.head.ref }}
       cancel-in-progress: true
     with:
-      hosting_provider: ${{ vars.HOSTING_PROVIDER }} # 'DIGITAL_OCEAN' or 'AWS'
+      hosting_provider: 'AWS'  # 'DIGITAL_OCEAN' or 'AWS' (Hardcoded to AWS for testing)
       app_name: flask-react-template
       app_env: preview
-      app_hostname: preview.flask-react-template.platform.bettrhq.com
-      branch: main
-      checks: "['npm:coverage', 'npm:lint', 'compose:test']"
+      branch: ${{ github.event.pull_request.head.ref }}
       docker_registry: ${{ vars.DOCKER_REGISTRY }}
       docker_username: ${{ vars.DOCKER_USERNAME }}
       aws_cluster_name: ${{ vars.AWS_CLUSTER_NAME }}
-      aws_region: ${{ vars.AWS_REGION }}
-      sonar_host_url: ${{ vars.SONAR_HOST_URL }}
+      aws_region: 'us-east-1' # Hardcoded for testing
       do_cluster_id: ${{ vars.DO_CLUSTER_ID }}
     secrets:
       docker_password: ${{ secrets.DOCKER_PASSWORD }}
-      doppler_token: ${{ secrets.DOPPLER_PREVIEW_TOKEN }}
       aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
       aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       do_access_token: ${{ secrets.DO_ACCESS_TOKEN }}
-      sonar_token: ${{ secrets.SONAR_TOKEN }}
