chore: changed docker_registry to use AWS ECR for testing

--- a/.github/workflows/clean_on_delete.yml
+++ b/.github/workflows/clean_on_delete.yml
@@ -16,7 +16,7 @@ jobs:
       app_name: flask-react-template
       app_env: preview
       branch: ${{ github.event.ref }}
-      docker_registry: ${{ vars.DOCKER_REGISTRY }}
+      docker_registry: ${{ vars.AWS_ACCOUNT_ID }}.dkr.ecr.${{ vars.AWS_REGION }}.amazonaws.com # Hardcoded to test AWS ECR and registry detection logic
       docker_username: ${{ vars.DOCKER_USERNAME }}
       aws_cluster_name: ${{ vars.AWS_CLUSTER_NAME }}
       do_cluster_id: ${{ vars.DO_CLUSTER_ID }}
