--- a/.github/workflows/clean.yml
+++ b/.github/workflows/clean.yml
@@ -17,6 +17,7 @@ jobs:
       docker_registry: ${{ vars.AWS_ACCOUNT_ID }}.dkr.ecr.${{ vars.AWS_REGION }}.amazonaws.com # Hardcoded to test AWS ECR and registry detection logic
       docker_username: ${{ vars.DOCKER_USERNAME }}
       aws_cluster_name: ${{ vars.AWS_CLUSTER_NAME }}
+      aws_use_ecr: true
       aws_region: 'us-east-1' # Hardcoded for testing
       do_cluster_id: ${{ vars.DO_CLUSTER_ID }}
     secrets:
