--- a/.github/workflows/clean_on_delete.yml
+++ b/.github/workflows/clean_on_delete.yml
@@ -12,7 +12,7 @@ jobs:
     with:
       # ENV-BASED provider selection
       hosting_provider: 'AWS'  # 'DIGITAL_OCEAN' or 'AWS' (Hardcoded to AWS for testing)
-      aws_region: 'us-east-1' # Hardcoded for testing
+      aws_region: ${{ vars.AWS_REGION }}
       app_name: flask-react-template
       app_env: preview
       branch: ${{ github.event.ref }}
@@ -20,6 +20,7 @@ jobs:
       aws_cluster_name: ${{ vars.AWS_CLUSTER_NAME }}
       do_cluster_id: ${{ vars.DO_CLUSTER_ID }}
     secrets:
+      docker_password: ${{ secrets.DOCKER_PASSWORD }}
       aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
       aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       do_access_token: ${{ secrets.DO_ACCESS_TOKEN }}
