--- a/.github/workflows/permanent_preview.yml
+++ b/.github/workflows/permanent_preview.yml
@@ -1,28 +1,34 @@
-name: clean_on_pr_closed
+name: permanent_preview
 
 on:
-  pull_request_target:
-    types: [closed]
+  push:
+    branches:
+      - main
 
 jobs:
-  clean:
+  permanent_preview:
     uses: jalantechnologies/github-ci/.github/workflows/ci.yml@vikram/feat/add-aws-ecr-image-cleanup
     concurrency:
-      group: ci-preview-${{ github.event.pull_request.head.ref }}
+      group: ci-permanent-preview
       cancel-in-progress: true
     with:
-      hosting_provider: 'AWS'  # 'DIGITAL_OCEAN' or 'AWS' (Hardcoded to AWS for testing)
+      hosting_provider: 'AWS' # 'DIGITAL_OCEAN' or 'AWS' (Hardcoded to AWS for testing)
       app_name: flask-react-template
       app_env: preview
-      branch: ${{ github.event.pull_request.head.ref }}
+      app_hostname: preview.flask-react-template.platform.bettrhq.com
+      branch: main
+      checks: "['npm:coverage', 'npm:lint', 'compose:test']"
       docker_registry: ${{ vars.AWS_ACCOUNT_ID }}.dkr.ecr.${{ vars.AWS_REGION }}.amazonaws.com # Hardcoded to test AWS ECR and registry detection logic
       docker_username: ${{ vars.DOCKER_USERNAME }}
       aws_cluster_name: ${{ vars.AWS_CLUSTER_NAME }}
-      aws_region: 'us-east-1' # Hardcoded for testing
+      aws_region: ${{ vars.AWS_REGION }}
       aws_use_ecr: true
+      sonar_host_url: ${{ vars.SONAR_HOST_URL }}
       do_cluster_id: ${{ vars.DO_CLUSTER_ID }}
     secrets:
       docker_password: ${{ secrets.DOCKER_PASSWORD }}
+      doppler_token: ${{ secrets.DOPPLER_PREVIEW_TOKEN }}
       aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
       aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       do_access_token: ${{ secrets.DO_ACCESS_TOKEN }}
+      sonar_token: ${{ secrets.SONAR_TOKEN }}
