--- a/.github/workflows/preview_on_dispatch.yml
+++ b/.github/workflows/preview_on_dispatch.yml
@@ -1,28 +1,31 @@
-name: clean_on_pr_closed
+name: preview_on_dispatch
 
-on:
-  pull_request_target:
-    types: [closed]
+on: workflow_dispatch
 
 jobs:
-  clean:
+  preview:
     uses: jalantechnologies/github-ci/.github/workflows/ci.yml@vikram/feat/add-aws-ecr-image-cleanup
     concurrency:
-      group: ci-preview-${{ github.event.pull_request.head.ref }}
+      group: ci-preview-${{ github.event.ref }}
       cancel-in-progress: true
     with:
-      hosting_provider: 'AWS'  # 'DIGITAL_OCEAN' or 'AWS' (Hardcoded to AWS for testing)
+      hosting_provider: 'AWS' # 'DIGITAL_OCEAN' or 'AWS' (Hardcoded to AWS for testing)
       app_name: flask-react-template
       app_env: preview
-      branch: ${{ github.event.pull_request.head.ref }}
+      app_hostname: '{1}.preview.platform.bettrhq.com'
+      branch: ${{ github.event.ref }}
+      build_args: |
+        APP_ENV=preview
+      checks: "['npm:coverage', 'npm:lint', 'compose:test']"
       docker_registry: ${{ vars.AWS_ACCOUNT_ID }}.dkr.ecr.${{ vars.AWS_REGION }}.amazonaws.com # Hardcoded to test AWS ECR and registry detection logic
       docker_username: ${{ vars.DOCKER_USERNAME }}
       aws_cluster_name: ${{ vars.AWS_CLUSTER_NAME }}
+      aws_region: ${{ vars.AWS_REGION }}
       aws_use_ecr: true
-      aws_region: 'us-east-1' # Hardcoded for testing
       do_cluster_id: ${{ vars.DO_CLUSTER_ID }}
     secrets:
       docker_password: ${{ secrets.DOCKER_PASSWORD }}
+      doppler_token: ${{ secrets.DOPPLER_PREVIEW_TOKEN }}
       aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
       aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       do_access_token: ${{ secrets.DO_ACCESS_TOKEN }}
