--- a/.github/workflows/clean.yml
+++ b/.github/workflows/clean.yml
@@ -7,18 +7,17 @@ jobs:
   clean:
     uses: jalantechnologies/github-ci/.github/workflows/clean.yml@v3.2.6
     concurrency:
-      group: ci-preview-${{ github.event.pull_request.head.ref }}
+      group: ci-preview-${{ github.event.ref }}
       cancel-in-progress: true
     with:
       hosting_provider: ${{ vars.HOSTING_PROVIDER }}
       app_name: flask-react-app
       app_env: preview
-      branch: ${{ github.event.pull_request.head.ref }}
+      branch: ${{ github.event.ref }}
       docker_registry: ${{ vars.AWS_ACCOUNT_ID }}.dkr.ecr.${{ vars.AWS_REGION }}.amazonaws.com # Hardcoded to test AWS ECR and registry detection logic
       docker_username: ${{ vars.DOCKER_USERNAME }}
       aws_cluster_name: ${{ vars.AWS_CLUSTER_NAME }}
-      aws_use_ecr: true
-      aws_region: 'us-east-1' # Hardcoded for testing
+      aws_region: ${{ vars.AWS_REGION }}
       do_cluster_id: ${{ vars.DO_CLUSTER_ID }}
     secrets:
       docker_password: ${{ secrets.DOCKER_PASSWORD }}
