--- a/.github/workflows/clean_on_delete.yml
+++ b/.github/workflows/clean_on_delete.yml
@@ -20,7 +20,7 @@ jobs:
       aws_cluster_name: ${{ vars.AWS_CLUSTER_NAME }}
       do_cluster_id: ${{ vars.DO_CLUSTER_ID }}
     secrets:
-      docker_password: ${{ secrets.DOCKER_PASSWORD }}
+      # docker_password: ${{ secrets.DOCKER_PASSWORD }}
       aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
       aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       do_access_token: ${{ secrets.DO_ACCESS_TOKEN }}
