--- a/.github/workflows/clean.yml
+++ b/.github/workflows/clean.yml
@@ -18,13 +18,13 @@ jobs:
         APP_ENV=preview
       checks: "['npm:coverage', 'npm:lint', 'compose:test']"
       docker_registry: ${{ vars.AWS_ACCOUNT_ID }}.dkr.ecr.${{ vars.AWS_REGION }}.amazonaws.com # Hardcoded to test AWS ECR and registry detection logic
-      docker_username: ${{ vars.DOCKER_USERNAME }}
+      # docker_username: ${{ vars.DOCKER_USERNAME }}
       aws_cluster_name: ${{ vars.AWS_CLUSTER_NAME }}
       aws_region: ${{ vars.AWS_REGION }}
       aws_use_ecr: true
       do_cluster_id: ${{ vars.DO_CLUSTER_ID }}
     secrets:
-      docker_password: ${{ secrets.DOCKER_PASSWORD }}
+      # docker_password: ${{ secrets.DOCKER_PASSWORD }}
       doppler_token: ${{ secrets.DOPPLER_PREVIEW_TOKEN }}
       aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
       aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
