--- a/.github/workflows/clean.yml
+++ b/.github/workflows/clean.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   clean:
-    uses: jalantechnologies/github-ci/.github/workflows/clean.yml@v3.2.5
+    uses: jalantechnologies/github-ci/.github/workflows/clean.yml@punith/ci/fix-set-output-deprecation
     concurrency:
       group: ci-preview-${{ github.event.pull_request.head.ref }}
       cancel-in-progress: true
