--- a/.github/workflows/preview_on_pr_update.yml
+++ b/.github/workflows/preview_on_pr_update.yml
@@ -17,6 +17,9 @@ jobs:
           path: ./
       
       - name: List files to confirm path
+        run: pwd
+        
+      - name: List files to confirm path
         run: ls -la
 
       - name: Checkout code
