--- a/.github/workflows/preview_on_pr_update.yml
+++ b/.github/workflows/preview_on_pr_update.yml
@@ -29,8 +29,8 @@ jobs:
         uses: github/codeql-action/upload-sarif@v4
         with:
           sarif_file: /home/runner/work/flask-react-template/flask-react-template/trivy-results.sarif
-          sha: ${{ github.event.pull_request.head.sha }}
-          ref: ${{ github.event.pull_request.head.ref }}
+          sha: ${{ github.sha }}
+          ref: ${{ github.ref }}
 
   preview:
     # Run only if PR is open and not draft
