--- a/.github/workflows/preview_on_pr_update.yml
+++ b/.github/workflows/preview_on_pr_update.yml
@@ -30,7 +30,7 @@ jobs:
           # Encode SARIF file to base64 (no line wrapping)
           # base64 -w0 trivy-results.sarif > sarif.b64
           SARIF_BASE64=$(base64 -w0 trivy-results.sarif)
-          env
+          # env
 
 
           jq -n \
