--- a/.github/workflows/preview_on_pr_update.yml
+++ b/.github/workflows/preview_on_pr_update.yml
@@ -29,12 +29,14 @@ jobs:
         run: |
           # Encode SARIF file to base64 (no line wrapping)
           # base64 -w0 trivy-results.sarif > sarif.b64
-          SARIF_BASE64=$(base64 -w0 trivy-results.sarif)
-          # env
+          export SARIF_BASE64=$(base64 -w0 trivy-results.sarif)
+          env | grep SARIF_BASE64
+          env | grep GITHUB_SHA
+          env | grep GITHUB_REF
 
 
-          jq -n \
-            '{ commit_sha: $GITHUB_SHA, ref: $GITHUB_REF, sarif: $SARIF_BASE64 }' > payload.json
+          # jq -n \
+          #   '{ commit_sha: $GITHUB_SHA, ref: $GITHUB_REF, sarif: $SARIF_BASE64 }' > payload.json
 
           # HTTP_STATUS=$(curl -s -o response.json -w "%{http_code}" \
           #   -H "Accept: application/vnd.github+json" \
